using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class CONSTANT
{
    public static string TAG_UNIT = "Unit";
    public static string TAG_ENEMY = "Enemy";
    public static string TAG_TILE = "Tile";
    public static string TAG_GROUND = "Ground";
    public static string TAG_BASE = "Base";
    public static string TAG_ATTACK = "Attack";

    public static string ANITRIGGER_DEAD = "IsDead";
    public static string ANIBOOL_RUN = "IsRunning";
    public static string ANIBOOL_ATTACK = "IsAttacking";


}

